Styling und weitere Anpassungen für reactive Forms