@@ -6,6 +6,7 @@ import com.rezepte_app.repository.RezepteRepository;
 import com.rezepte_app.repository.TagRepository;
 import com.rezepte_app.model.Rezept;
 import com.rezepte_app.model.Tag;
+import com.rezepte_app.service.ImageServices.ImageUploadService;
 import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
@@ -17,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.nio.file.AccessDeniedException;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -26,43 +26,53 @@ public class RezepteService {
 
     private static final Logger logger = LoggerFactory.getLogger(RezepteService.class);
 
-    @Autowired
-    private TagService tagService;
-
-    @Autowired
+    private final TagService tagService;
     private final RezeptMapper rezeptMapper;
+    private final TagRepository tagRepository;
+    private final RezepteRepository rezepteRepository;
+    private final ImageUploadService imageUploadService;
 
+    // Constructor-based Dependency Injection
     @Autowired
-    private TagRepository tagRepository;
-
-    @Autowired
-    private RezepteRepository rezepteRepository;
-
-    @Autowired
-    private ImageUploadService imageUploadService;
-
-
-    public RezepteService(RezeptMapper rezeptMapper) {
+    public RezepteService(TagService tagService,
+                          RezeptMapper rezeptMapper,
+                          TagRepository tagRepository,
+                          RezepteRepository rezepteRepository,
+                          ImageUploadService imageUploadService) {
+        this.tagService = tagService;
         this.rezeptMapper = rezeptMapper;
+        this.tagRepository = tagRepository;
+        this.rezepteRepository = rezepteRepository;
+        this.imageUploadService = imageUploadService;
     }
 
     // Im RezepteService
     @Transactional
     public List<Rezept> fetchAlleRezepte(String userId) {
         List<Rezept> alleRezepte = rezepteRepository.findByUserIdOrderByIdDesc(userId);
-        logger.info("Anzahl der abgerufenen Rezepte: {}", alleRezepte.size());
+        logRezepteInfo(userId, alleRezepte);
+        initializeTagsForRezepte(alleRezepte);
+        return alleRezepte;
+    }
 
-        // Lade alle Tags für alle Rezepte in einer einzigen Abfrage
+    private void logRezepteInfo(String userId, List<Rezept> alleRezepte) {
+        if (alleRezepte.isEmpty()) {
+            logger.warn("Keine Rezepte für den Benutzer {} gefunden", userId);
+        } else {
+            logger.info("Anzahl der abgerufenen Rezepte: {}", alleRezepte.size());
+        }
+    }
+
+    private void initializeTagsForRezepte(List<Rezept> alleRezepte) {
+        // Tags der Rezepte in einer einzigen Abfrage laden
         for (Rezept rezept : alleRezepte) {
             Hibernate.initialize(rezept.getTags());
         }
 
-        // Optional: Loggen einiger Details der abgerufenen Rezepte
+        // Optional: Loggen der Details der abgerufenen Rezepte
         if (logger.isDebugEnabled()) {
             alleRezepte.forEach(rezept -> logger.debug("Rezept: {}", rezept));
         }
-
-        return alleRezepte;
     }
 
     // Methode zum Hinzufügen eines Tags zu einem Rezept
@@ -83,97 +93,80 @@ public class RezepteService {
     //Hier Konvertierung des RezeptDTO zu Rezept
     @Transactional
     public Rezept createRezept(@Valid RezeptDTO rezeptDTO, String userId, MultipartFile image) throws IOException {
-        // RezeptDTO zu Rezept konvertieren
+        Rezept rezept = convertDtoToRezept(rezeptDTO, userId);
+        handleImageUpload(rezept, image);
+        handleTags(rezept);
+        return rezepteRepository.save(rezept);
+    }
+
+    private Rezept convertDtoToRezept(RezeptDTO rezeptDTO, String userId) {
         Rezept rezept = rezeptMapper.rezeptDTOToRezept(rezeptDTO);
-        logger.info("Nach Mapping - Name: {}, OnlineAdresse: {}", rezept.getName(), rezept.getOnlineAdresse());
-        logger.info("Empfangenes Rezept: {}", rezeptDTO);
-
         rezept.setUserId(userId);
-        logger.info("Rezept vor dem Speichern: {}", rezept);
-        logger.info("UserId: {}", rezept.getUserId());
+        return rezept;
+    }
 
-
-        // Bildverarbeitung und -speicherung
+    private void handleImageUpload(Rezept rezept, MultipartFile image) throws IOException {
         if (image != null && !image.isEmpty()) {
             String bildUrl = imageUploadService.uploadImage(image, 200, 400);
             rezept.setBildUrl(bildUrl);
         }
+    }
 
-        // Tags verarbeiten, wobei IDs gesammelt in einem einzigen Query geprüft werden
+    private void handleTags(Rezept rezept) {
         if (rezept.getTags() != null && !rezept.getTags().isEmpty()) {
-
             List<Long> existingTagIds = rezept.getTags().stream()
                     .map(Tag::getId)
                     .filter(Objects::nonNull)
-                    .toList();
+                    .collect(Collectors.toList());
 
             Map<Long, Tag> existingTagsMap = tagRepository.findAllById(existingTagIds).stream()
                     .collect(Collectors.toMap(Tag::getId, tag -> tag));
 
-            // Tags verarbeiten und ggf. neu speichern
             Set<Tag> updatedTags = rezept.getTags().stream()
-                    .map(tag -> {
-                        if (tag.getId() != null && existingTagsMap.containsKey(tag.getId())) {
-                            // Existierendes Tag aus der Map holen
-                            return existingTagsMap.get(tag.getId());
-                        } else {
-                            // Neues Tag speichern
-                            return tagRepository.save(tag);
-                        }
-                    })
+                    .map(tag -> getOrCreateTag(tag, existingTagsMap))
                     .collect(Collectors.toSet());
 
             rezept.setTags(new ArrayList<>(updatedTags));
         }
+    }
 
-        // Rezept speichern in Datenbank (DB)
-        return rezepteRepository.save(rezept);
+    private Tag getOrCreateTag(Tag tag, Map<Long, Tag> existingTagsMap) {
+        if (tag.getId() != null && existingTagsMap.containsKey(tag.getId())) {
+            return existingTagsMap.get(tag.getId());
+        } else {
+            return tagRepository.save(tag);
+        }
     }
 
 
     @Transactional
     public Rezept updateRezept(Long id, RezeptDTO rezeptDTO, String userId, MultipartFile image) throws IOException {
-        Optional<Rezept> existingRezeptOptional = rezepteRepository.findById(id);
-        if (existingRezeptOptional.isEmpty()) {
-            throw new EntityNotFoundException("Rezept mit ID " + id + " nicht gefunden.");
-        }
+        Rezept existingRezept = getExistingRezept(id);
+        updateRezeptDetails(existingRezept, rezeptDTO, userId, image);
+        return rezepteRepository.save(existingRezept);
+    }
 
-        Rezept existingRezept = existingRezeptOptional.get();
+    private Rezept getExistingRezept(Long id) {
+        return rezepteRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Rezept mit ID " + id + " nicht gefunden."));
+    }
 
-        if (rezeptDTO.getId() == null) {
-            rezeptDTO.setId(id);
-            System.out.println("rezeptDTO in RService null: " + rezeptDTO.getId());
-        } else {
-            logger.debug("ID in rezeptDTO ist nicht null: {}", rezeptDTO.getId());
-        }
-
+    private void updateRezeptDetails(Rezept existingRezept, RezeptDTO rezeptDTO, String userId, MultipartFile image) throws IOException {
         existingRezept.setName(rezeptDTO.getName());
         existingRezept.setOnlineAdresse(rezeptDTO.getOnlineAdresse());
         existingRezept.setUserId(userId);
+        updateTags(existingRezept, rezeptDTO);
+        handleImageUpload(existingRezept, image);
+    }
 
+    private void updateTags(Rezept existingRezept, RezeptDTO rezeptDTO) {
         if (rezeptDTO.getTags() != null) {
             Set<Tag> updatedTags = rezeptDTO.getTags().stream()
                     .map(tag -> tagRepository.findById(tag.getId()).orElseGet(() -> tagRepository.save(tag)))
                     .collect(Collectors.toSet());
             existingRezept.setTags(new ArrayList<>(updatedTags));
-            System.out.println("U_Tags erfolgreich aktualisiert.");
-        } else {
-            logger.debug("Tags NICHT erfolgreich aktualisiert.");
         }
-
-        if (image != null && !image.isEmpty()) {
-            String bildUrl = imageUploadService.uploadImage(image, 200, 400);
-            existingRezept.setBildUrl(bildUrl);
-            System.out.println("U_Bild erfolgreich verarbeitet.");
-        } else {
-            logger.debug("U_Bild NICHT erfolgreich verarbeitet.");
-        }
-
-        logger.debug("existingRezept sieht so aus" + existingRezept);
-
-        return rezepteRepository.save(existingRezept);
     }
-
 
 
     @Transactional
@@ -181,7 +174,7 @@ public class RezepteService {
         // Suchen des Tags, Update durchführen und zurückgeben des aktualisierten Tags
         Tag tag = tagRepository.findById((long) tagId).orElseThrow(() -> new IllegalArgumentException("Tag nicht gefunden"));
         tag.setLabel(label);
-        return tagRepository.save(tag);  // Speichert das aktualisierte Tag und gibt es zurück
+        return tagRepository.save(tag);
     }
 
     @Transactional
